@@ -160,6 +160,7 @@ tyir <tyir at users dot sourceforge dot net>
 
 Vivenzio Pagliari <vivenzio@web.de>
   Some useful patches for port monitoring
+  PowerBook battery patch
 
 Walt Nelson <wnelsonjr at comcast dot net>
   $freq fix
