@@ -16,7 +16,7 @@
       <firstname>Brenden</firstname>
       <surname>Matthews</surname>
     </author>
-    <date>2006-04-15</date>
+    <date>2006-04-23</date>
   </refentryinfo>
 
   <refmeta>
