@@ -463,6 +463,9 @@ struct ibm_acpi_struct {
 
 struct ibm_acpi_struct ibm_acpi;
 
+enum { PB_BATT_STATUS, PB_BATT_PERCENT, PB_BATT_TIME};
+void get_powerbook_batt_info(char* buf, size_t size, int i);
+
 struct process {
 	struct process *next;
 	struct process *previous;
