@@ -1,5 +1,8 @@
 # $Id$
 
+2006-04-23
+	* Added support for PowerBook batteries
+
 2006-04-15
 	* Added patch from Peter Tarjan to add support for IBM ACPI
 	* Added xmms2 patch from Lassi Selander (sf.net patch 1469523)
